--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,49 @@
 /*this section is for all */
     margin: 0px;
     padding: 0px;
-    .nev-bar{
-        color: blue;
+    .menu-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 5px 20px;
+        padding: 0px 50px;
+        }
+    .logo {
+        display: flex;
+        align-items: center;
+        padding-right: 20px;
+        }
+    .logo-photo{
+        width: 15vh;
+        height: 7vh;
+        padding-right: 20px;
     }
+    .menu {
+        padding: 20px;
+    }
+    .highlight {
+        color: #ff42A5;
+    }
+    .list{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    }
+    .item{
+        background-color: #E7E6E9 ;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        padding: 5px;
+    }
+    .list-item {
+        padding-right: 20px;
+    }
+    .follow {
+        padding: 0px 5px;
+    }
+    .social-logo{
+        width: 3vh;
+    }
+
 }
