--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@
         border: 0px;
     }
     .btn-hvr:hover{
-        border-color: ;
+        border-color: #ff42A5;
         border: 2px solid #ff42A5;
         color: #ff42A5;
     }
